--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Testing</title>
-    <script defer src="./Metaprogramming/Proxy/index.js"></script>
+    <script defer src="./browser/Errors/index.js"></script>
   </head>
   <body></body>
 </html>
